# Scratch

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  TASKS.md  alembic.ini  alembic.knowledge.ini  alembic.main.ini  alembic.users.ini  build_appendices.py  docker-compose.yml  entrypoint.sh  loki-config.yaml  prometheus.yml  promtail-config.yml  pyproject.toml  requirements.txt  tempo-config.yaml  test_admin.py
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/knowledge/: env.py
alembic/knowledge/versions/: 2026_04_09_add_situation_ui_fields.py
alembic/main/versions/: 2026_05_18_add_mime_type_and_jsonb.py
alembic/users/: env.py  script.py.mako
docs/: FASTAPI_OBSERVABILITY_SETUP.md
frontend/: .eslintrc.js  Dockerfile  babel.config.js  nginx.conf  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
frontend/src/api/: AdviceService.js  AnalysisService.js  AuthInterceptor.js  AuthService.js  BaseApiService.js  CauseService.js  ConfigService.js  ExperimentService.js  FilmService.js  HttpClient.js  ImageService.js  SituationService.js  TokenStorage.js  UserService.js  imageBlobCache.js  index.js
frontend/src/components/common/: index.js
frontend/src/components/common/AuthenticatedImage/: AuthenticatedImage.jsx  AuthenticatedImage.module.css
frontend/src/components/common/Button/: Button.jsx  Button.module.css
frontend/src/components/common/Card/: Card.jsx  Card.module.css
frontend/src/components/common/Checkbox/: Checkbox.jsx  Checkbox.module.css
frontend/src/components/common/ConfirmDialog/: ConfirmDialog.jsx  ConfirmDialog.module.css
frontend/src/components/common/CrudFormModal/: CrudFormModal.jsx  CrudFormModal.module.css
frontend/src/components/common/CrudTable/: CrudTable.jsx  CrudTable.module.css
frontend/src/components/common/EmptyState/: EmptyState.jsx  EmptyState.module.css
frontend/src/components/common/Input/: Input.jsx  Input.module.css
frontend/src/components/common/Modal/: Modal.jsx  Modal.module.css
frontend/src/components/common/Select/: Select.jsx  Select.module.css
frontend/src/components/common/Spinner/: Spinner.jsx  Spinner.module.css
frontend/src/components/common/ThemeToggle/: ThemeToggle.jsx  ThemeToggle.module.css
frontend/src/components/common/Toast/: Toast.jsx  Toast.module.css
frontend/src/components/features/: index.js
frontend/src/components/features/HistogramChart/: HistogramChart.clean.jsx  HistogramChart.jsx  HistogramChart.module.css
frontend/src/components/features/ImageCarousel/: ImageCarousel.jsx  ImageCarousel.module.css  index.js
frontend/src/components/icons/: phosphor.js
frontend/src/components/layout/: ProtectedRoute.jsx  ProtectedRoute.module.css  index.js
frontend/src/context/: AuthContext.jsx  NotificationContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useApi.js  useAuthenticatedImageUrl.js  useClickOutside.js  useCrudResource.js  useExperimentActions.js  useExperimentData.js  useFetch.js  useForm.js  useGeneratedId.js  useHistogramData.js
frontend/src/pages/: index.js
frontend/src/pages/AdminPage/: AdminPage.jsx  AdminPage.module.css  AdviceManagement.jsx  CausesManagement.jsx  ConfigsManagement.jsx  FilmsManagement.jsx  KnowledgeManagement.jsx  KnowledgeManagement.module.css  Management.module.css  RolesModal.jsx  SituationsManagement.jsx  UsersManagement.jsx  index.js
frontend/src/pages/CreateExperimentPage/: CreateExperimentPage.jsx  CreateExperimentPage.module.css  index.js
frontend/src/pages/ExperimentDetailPage/: ExperimentDetailPage.jsx  ExperimentDetailPage.module.css  index.js
frontend/src/pages/ExperimentsPage/: ExperimentsPage.jsx  ExperimentsPage.module.css  index.js
frontend/src/pages/LoginPage/: LoginPage.jsx  LoginPage.module.css  index.js
frontend/src/styles/: global.css  reset.css  variables.css
frontend/src/utils/: constants.js  formatters.js  httpStatus.js  validators.js
grafana/provisioning/dashboards/: fastapi-observability.json
grafana/provisioning/datasources/: datasources.yaml
nginx/: nginx.conf
rabbitmq/: rabbitmq.conf
redis/: redis.conf
sql/: create_readonly_user.sql
sql/init/: 02_readonly_user.sh  init_experiments_db.sql  init_knowledge_db.sql  init_users_db.sql
src/: __init__.py  main.py
src/api/: README.md  __init__.py  auth.py  crud_factory.py  crud_router.py  equipment_configs.py  errors.py  experiments.py  films.py  health.py  image_analysis.py  images.py  knowledge.py  pagination.py  responses.py  tasks.py  users.py
src/core/: __init__.py  audit.py  authorization.py  celery_app.py  circuit_breaker.py  config.py  database.py  dependencies.py  init_data.py  logging_config.py  login_throttle.py  metrics.py  middleware.py  rate_limit.py  redis.py  security.py  seed_data.py  token_store.py  tracing.py
src/models/: __init__.py  base.py  equipment_config.py  experiment.py  film.py  image.py  knowledge.py  user.py
src/repositories/: __init__.py  advice_repository.py  base.py  cause_repository.py  equipment_config_repository.py  experiment_repository.py  film_repository.py  image_repository.py  interfaces.py  knowledge_repository_base.py  named_entity.py  situation_repository.py  user_repository.py
src/schemas/: README.md  advice.py  base.py  cause.py  equipment_config.py  experiment.py  film.py  image.py  situation.py  user.py
src/services/: IMAGE_ANALYSIS_README.md  README.md  __init__.py  advice_service.py  auth_service.py  base.py  cause_service.py  equipment_config_service.py  exceptions.py  experiment_image_service.py  experiment_service.py  film_service.py  image_analysis_service.py  knowledge_service_base.py  report_service.py  situation_service.py  user_service.py
src/tasks/: __init__.py  cache_tasks.py  experiment_tasks.py  helpers.py  image_analysis_tasks.py
tests/: conftest.py  test_api_protection.py  test_authorization.py  test_security_tokens.py
tests/unit/: test_schemas_experiment.py  test_scratch_index.py  test_security_extra.py  test_user_schema_password.py
(+23 files in other folders)
